--- a/src/components/UnityApp/UnityApp.css
+++ b/src/components/UnityApp/UnityApp.css
@@ -3,47 +3,42 @@
   padding: 10px;
   margin-bottom: 6rem;
   letter-spacing: 0.5px;
+  line-height: 1.5rem;
   /* background-color: rgb(255, 204, 184); */
-}
-
-.unity-app p {
-  text-align: left;
-  margin-top: -8px;
-  /* background-color: lightsalmon; */
 }
 
 .unity-app h3 {
   text-transform: capitalize;
+  margin-top: 50px;
+  margin-left: 60px;
+  margin-right: 60px;
   /* background-color: lightseagreen; */
 }
 
-.unity-app span {
-  background-color: lime;
+.unity-app p {
+  text-align: justify;
+  margin: -8px 60px 0px 60px;
+  /* background-color: lightsalmon; */
+}
+
+.static-image {
+  width: 100%;
+  height: 100%;
 }
 
 .unity-player {
   border: 2px solid rgb(233, 233, 233);
-  /* background-color: magenta; */
   /* padding: 10px; */
+  /* background-color: magenta; */
 }
 
-.unity-player-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  /* background-color: lime; */
-}
-
-.unity-player-button button {
+.unity-player img {
   width: 100%;
   height: 100%;
-  border-width: 0px;
-  font-size: 20px;
   cursor: pointer;
-  background-color: rgb(236, 236, 236);
+  /* background-color: blue; */
 }
 
-.unity-player-button button:hover {
+.unity-player img:hover {
   opacity: 80%;
 }
